--- a/index.html
+++ b/index.html
@@ -4,8 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kit Kazak</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <p>Hello! This site is currently under construction.</p>
+    <div id="box">
+        <div id="photo">
+            
+        </div>
+        <div id="name">Nikita Kazak</div>
+        <div id="about">
+            <div>A passionate QA Automation Engineer.</div>
+            <div>I make sure everything goes to plan.</div>
+        </div>
+        <div id="social">
+            <a href="https://www.linkedin.com/in/kitkazak/" target="_blank">
+                <i class="fa-brands fa-linkedin-in"></i>
+            </a>
+            <a href="https://github.com/kitkazak" target="_blank">
+                <i class="fa-brands fa-github"></i>
+            </a>
+            <a href="https://t.me/kitkazak" target="_blank">
+                <i class="fa-brands fa-telegram"></i>
+            </a>
+            <a href="mailto:kitkazak@gmail.com" target="_blank">
+                <i class="fa-solid fa-envelope"></i>
+            </a>
+            <a href="https://read.cv/kitkazak" target="_blank">
+                <svg width="36" height="36" viewBox="0 0 341 361" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <rect x="81.5382" y="14.3624" width="252.889" height="279.246" rx="34.6039" transform="rotate(14 81.5382 14.3624)" stroke="#C84B31" stroke-width="23.0693"/>
+                    <rect x="101.162" y="78.6895" width="184.554" height="23.0693" rx="7" transform="rotate(14 101.162 78.6895)" fill="#C84B31"/>
+                    <rect x="88.5809" y="131" width="184.554" height="23.0693" rx="7" transform="rotate(14 88.5809 131)" fill="#C84B31"/>
+                    <rect x="75.5809" y="180" width="92.2771" height="23.0693" rx="7" transform="rotate(14 75.5809 180)" fill="#C84B31"/>
+                </svg>    
+            </a>
+        </div>
+    </div>
+    <script src="https://kit.fontawesome.com/7667500eac.js" crossorigin="anonymous"></script>
 </body>
 </html>
